; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fulltext.c_tokenize_segment.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fulltext.c_tokenize_segment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32 (%struct.TYPE_11__*, i8*, i32, %struct.TYPE_10__**)*, i32 (%struct.TYPE_10__*, i8**, i32*, i32*, i32*, i32*)*, i32 (%struct.TYPE_10__*)* }
%struct.TYPE_10__ = type { %struct.TYPE_11__* }

@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i8*, i32, i32*)* @tokenize_segment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tokenize_segment(%struct.TYPE_11__* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  %11 = alloca %struct.TYPE_10__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %20, align 8
  store %struct.TYPE_9__* %21, %struct.TYPE_9__** %10, align 8
  store i32 1, i32* %12, align 4
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 0
  %24 = load i32 (%struct.TYPE_11__*, i8*, i32, %struct.TYPE_10__**)*, i32 (%struct.TYPE_11__*, i8*, i32, %struct.TYPE_10__**)** %23, align 8
  %25 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = call i32 %24(%struct.TYPE_11__* %25, i8* %26, i32 -1, %struct.TYPE_10__** %11)
  store i32 %27, i32* %13, align 4
  %28 = load i32, i32* %13, align 4
  %29 = load i32, i32* @SQLITE_OK, align 4
  %30 = icmp ne i32 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %4
  %32 = load i32, i32* %13, align 4
  store i32 %32, i32* %5, align 4
  br label %67

33:                                               ; preds = %4
  %34 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %36 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %35, i32 0, i32 0
  store %struct.TYPE_11__* %34, %struct.TYPE_11__** %36, align 8
  br label %37

37:                                               ; preds = %33, %54
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 1
  %40 = load i32 (%struct.TYPE_10__*, i8**, i32*, i32*, i32*, i32*)*, i32 (%struct.TYPE_10__*, i8**, i32*, i32*, i32*, i32*)** %39, align 8
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %42 = call i32 %40(%struct.TYPE_10__* %41, i8** %14, i32* %15, i32* %16, i32* %17, i32* %18)
  store i32 %42, i32* %13, align 4
  %43 = load i32, i32* %13, align 4
  %44 = load i32, i32* @SQLITE_OK, align 4
  %45 = icmp ne i32 %43, %44
  br i1 %45, label %46, label %47

46:                                               ; preds = %37
  br label %61

47:                                               ; preds = %37
  %48 = load i32*, i32** %9, align 8
  %49 = load i32, i32* %8, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %54

51:                                               ; preds = %47
  %52 = load i32, i32* %12, align 4
  %53 = icmp ne i32 %52, 0
  br label %54

54:                                               ; preds = %51, %47
  %55 = phi i1 [ true, %47 ], [ %53, %51 ]
  %56 = zext i1 %55 to i32
  %57 = load i8*, i8** %14, align 8
  %58 = load i32, i32* %15, align 4
  %59 = call i32 @string_dup_n(i8* %57, i32 %58)
  %60 = call i32 @query_add(i32* %48, i32 %56, i32 %59)
  store i32 0, i32* %12, align 4
  br label %37

61:                                               ; preds = %46
  %62 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %63 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %62, i32 0, i32 2
  %64 = load i32 (%struct.TYPE_10__*)*, i32 (%struct.TYPE_10__*)** %63, align 8
  %65 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %66 = call i32 %64(%struct.TYPE_10__* %65)
  store i32 %66, i32* %5, align 4
  br label %67

67:                                               ; preds = %61, %31
  %68 = load i32, i32* %5, align 4
  ret i32 %68
}

declare dso_local i32 @query_add(i32*, i32, i32) #1

declare dso_local i32 @string_dup_n(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
